  Changelog for the c-ares project

* Oct 21 2008 (Yang Tse)
  Charles Hardin added handling of EINPROGRESS for UDP connects.

* Oct 18 2008 (Daniel Stenberg)
  Charles Hardin made adig support a regular numerical dotted IP address for the
  -s option as well.

* Oct 7 2008 (Yang Tse)
- Added --enable-optimize configure option to enable and disable compiler
  optimizations to allow decoupled setting from --enable-debug.

* Oct 2 2008 (Yang Tse)
- Added --enable-warnings configure option to enable and disable strict
  compiler warnings to allow decoupled setting from --enable-debug.

* Sep 17 2008 (Yang Tse)
- Code reorganization to allow internal/private use of "nameser.h" to any
  system that lacks arpa/nameser.h or arpa/nameser_compat.h header files.

* Sep 16 2008 (Yang Tse)
- Code reorganization to allow internal/private use of ares_writev to any
  system that lacks the writev function.

* Sep 15 2008 (Yang Tse)
- Code reorganization to allow internal/private use of ares_strcasecmp to any
  system that lacks the strcasecmp function.

- Improve configure detection of some string functions.

* Sep 11 2008 (Yang Tse)
- Code reorganization to allow internal/private use of ares_strdup to any
  system that lacks the strdup function.

Version 1.5.3 (Aug 29, 2008)

* Aug 25 2008 (Yang Tse)
- Improvement by Brad House:

  This patch addresses an issue in which a response could be sent back to the
  source port of a client from a different address than the request was made to.
  This is one form of a DNS cache poisoning attack.

  The patch simply uses recvfrom() rather than recv() and validates that the
  address returned from recvfrom() matches the address of the server we have
  connected to. Only necessary on UDP sockets as they are connection-less, TCP
  is unaffected.

- Fix by George Neill:
  Fixed compilation of acountry sample application failure on some systems.

* Aug 4 2008 (Daniel Stenberg)
- Fix by Tofu Linden:

  The symptom: